# Telebot-Games-Parser

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  amvera.yml  docker-compose.yaml  main.py  print_result.py  pyproject.toml  requirements.txt
.github/workflows/: run_bot.yml
sites_parser/: games_free.py  games_free_with_selenium.py  platimarket.py  steampay.py
src/: constants.py  exceptions.py  main.py
src/functions/: exceptions.py  expected.py  games_free.py  platimarket.py  print_result.py  steampay.py
src/tests/: test_expected.py  test_games_free.py  test_main.py  test_platimarket.py  test_steampay.py
