[tool.poetry]
name = "Telebot-Games-Parser"
version = "0.1.0"
description = ""
authors = ["MaxBakshaev <risen.2011@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pytelegrambotapi = "^4.23.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
